apps/boubou/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: boubou
  namespace: nori-cloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: boubou
  template:
    metadata:
      labels:
        app: boubou
    spec:
      containers:
        - image: ghcr.io/nori-cloud/boubou:c6d1ef2
          name: boubou
          ports:
            - containerPort: 3000
