apps/boubou/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: boubou
  namespace: nori-cloud
  labels:
    app: boubou
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`boubou.norriswu.me`)
      kind: Rule
      services:
        - name: boubou
          port: 3000
